src/test/ui/macros/issue-54441.stderr
error: expected one of `crate`, `fn`, `pub`, `static`, or `type`, found `let`
  --> $DIR/issue-54441.rs:3:9
   |
LL |         let
   |         ^^^ unexpected token
...
LL |     m!();
   |     ----- in this macro invocation

error: aborting due to previous error

